--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Abdialimov Temurbek</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" href="./imgs/6534601.jpg" type="image/png">
 </head>
 
 <body>
