--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                 ab dicta distinctio natus eaque qui quam! Explicabo, aliquid cum! Magni fugiat sequi porro optio.</p>
 
             <div class="social-icons">
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
-                <a href="#"><i class='bx bxl-github'></i></a>
-                <a href="#"><i class='bx bxl-telegram'></i></a>
+                <a href="https://www.linkedin.com/in/abdialimovtemurbek/"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/abdialimovtemur"><i class='bx bxl-github'></i></a>
+                <a href="https://t.me/temurbek_abdialimov"><i class='bx bxl-telegram'></i></a>
                 <a href="#"><i class='bx bxl-facebook-circle'></i></a>
             </div>
 
